--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "mocha src/tests/*.js --compilers js:babel-core/register",
     "build": "./build.sh",
     "postversion": "git push && git push --tags",
-    "prepublish": "npm run build"
+    "prepublish": "npm t && npm run build"
   },
   "repository": {
     "type": "git",
